# rice-rush

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakePresets.json  install_ext.cmake
data/: attribution.txt  manifest.txt
data/animations/: explode.txt  player.txt
ext/: CMakeLists.txt
src/: CMakeLists.txt  build_version.hpp.in  main.cpp
src/engine/: animated_sprite.cpp  animated_sprite.hpp  audio.hpp  basis.hpp  config.cpp  config.hpp  context.hpp  delta_time.hpp  env.cpp  env.hpp  framerate.hpp  instanced.hpp  keyboard.hpp  quad.cpp  quad.hpp  sprite.cpp  sprite.hpp  trigger.hpp  trigger_renderer.cpp  trigger_renderer.hpp
src/game/: background.cpp  background.hpp  consumable.cpp  consumable.hpp  controller.cpp  controller.hpp  cooker_pool.cpp  cooker_pool.hpp  director.cpp  director.hpp  explode.cpp  explode.hpp  explode_pool.cpp  explode_pool.hpp  game.cpp  game.hpp  game_object.cpp  game_object.hpp  health.hpp  hud.cpp  hud.hpp  layout.hpp  pawn.hpp  player.cpp  player.hpp  powerup.cpp  powerup.hpp  resources.cpp  resources.hpp
src/util/: byte_array.hpp  collection.hpp  index_timeline.cpp  index_timeline.hpp  io.cpp  io.hpp  logger.cpp  logger.hpp  property.cpp  property.hpp  ptr.hpp  random.hpp  sequenced_index.cpp  sequenced_index.hpp  util.cpp  util.hpp
